First version of site slight update

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <img src="assets/img/gallery/blogs1.png" alt="">
                     </div>
                     <div class="blogs-cap">
-                        <h5><a href="#">Starts the automated process.</a></h5>
+                        <h5><a>Starts the automated process.</a></h5>
                         <p>The automated process starts as soon as your  clothes go into the machine.</p>
                     </div>
                     <div class="stickers">
@@ -167,7 +167,7 @@
                         <img src="assets/img/gallery/blogs2.png" alt="">
                     </div>
                     <div class="blogs-cap">
-                        <h5><a href="#">Starts the automated process.</a></h5>
+                        <h5><a>Starts the automated process.</a></h5>
                         <p>The automated process starts as soon as your  clothes go into the machine.</p>
                     </div>
                     <div class="stickers">
@@ -180,13 +180,14 @@
                         <img src="assets/img/gallery/blogs3.png" alt="">
                     </div>
                     <div class="blogs-cap">
-                        <h5>Starts the automated process.</h5>
+                        <h5><a>Starts the automated process.</a></h5>
                         <p>The automated process starts as soon as your  clothes go into the machine.</p>
                     </div>
                     <div class="stickers">
                         <span>Urban</span>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
@@ -297,7 +298,7 @@
                             <img src="assets/img/gallery/team7.png" alt="">
                             <div class="services-caption">
                                 <h3><a>Moxi</a></h3>
-                                <p>SaaS preventative musculo-skeletal health platform for employees</p>
+                                <p>Preventative musculo-skeletal SaaS health platform for employees</p>
                                 <a href="https://moxihealth.co.uk/" class="btn btn3">Visit Moxi</a>
                             </div>
                         </div>
